# myMCS

./: .gitignore  MCS.cpp  MCSCompound.cpp  MCSCompound.h  MCSList.h  MCSMap.cpp  MCSMap.h  MCSRingDetector.cpp  MCSRingDetector.h  Makefile  README.md  fmcs_R_wrap.cpp
include/: MCS.h  MCSCompound.h  MCSList.h  MCSRingDetector.h  log.h  util.h
src/: CMakeLists.txt  MCS.cpp  MCSCompound.cpp  MCSCompound.h  MCSList.h  MCSMap.cpp  MCSRingDetector.cpp  MCSRingDetector.h  fmcs_R_wrap.cpp  util.cpp  util.h
